# btrfs_to_s3

./: .gitignore  DESIGN.md  README.md  config.example.toml  implementation_plan.md  learnings.md  progress.md  prompt.md  pyproject.toml  requirements.md  stop.md  tasks.md  test_harness_implementation_plan.md  work_loop.sh
btrfs_to_s3/: __init__.py  __main__.py  chunker.py  cli.py  config.py  lock.py  manifest.py  metrics.py  orchestrator.py  path_utils.py  planner.py  restore.py  snapshots.py  state.py  streamer.py  uploader.py
integration_tests/: README.md  learnings.md  progress.md  tasks.md  test_harness_implementation_plan.md
integration_tests/config/: test.toml  test_archive.toml  test_large.toml  test_small.toml  test_spool.toml
integration_tests/harness/: config.py  env.py  logs.py  manifest.py  runner.py
integration_tests/scripts/: run_all.py  run_cli_flags.py  run_interrupt.py  run_large.py  run_restore_archive.py  setup_btrfs.py  teardown_btrfs.py  verify_manifest.py  verify_restore.py  verify_s3.py
pytest/: __init__.py  __main__.py
scripts/: fs_growth_analysis.sh
systemd/: btrfs_to_s3.service  btrfs_to_s3.timer
testing/: .gitignore  README.md  learnings.md  progress.md  stop.md  tasks.md  test_harness_implementation_plan.md
testing/config/: test.env  test.toml  test_archive.toml  test_large.toml  (+2 more)
tests/: test_chunker.py  test_cli.py  test_config.py  test_lock.py  test_manifest.py  test_metrics.py  test_orchestrator.py  test_planner.py  test_restore.py  test_smoke.py  test_snapshots.py  test_state.py  test_streamer.py  test_uploader.py
(+24 files in other folders)
